--- a/style.css
+++ b/style.css
@@ -1,7 +1,95 @@
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+.clearfix:after {
+    content:"";
+    display:table;
+    clear: both;
+}
+
+body{
+    font-family: cursive,sans-serif;
+    text-align: center;
+    font-size: 18px;
+/*    background-color: rgb(212, 212, 212,.50);*/
+}
+
 .rotate90 {
     -webkit-transform: rotate(90deg);
     -moz-transform: rotate(90deg);
     -o-transform: rotate(90deg);
     -ms-transform: rotate(90deg);
     transform: rotate(90deg);
+}
+
+h1,h2,h3 {
+    color: rebeccapurple;
+    text-align: center;
+    margin-bottom: 15px;
+    margin-top: 15px;
+}
+
+h2 {
+    font-size: 25px;
+}
+
+.dogplay_video {
+    position: relative;
+    top: 50%;
+}
+
+hr {
+    color: darkcyan;
+    width: 50px;
+    
+}
+
+.container {
+    width: 1140px;
+    margin: 20px auto 0 auto;
+}
+
+.blog-post {
+    width:75%;
+    float: left;
+    padding-right: 30px;
+}
+
+.other-posts {
+    width: 25%;
+    float: left;
+    background-color: lightblue
+}
+
+.author-box {
+   padding-top: 20px;
+   border-top: 1px solid darkcyan;
+    background-color: lightgray;
+}
+
+.jackprofile {
+    border-radius: 50%;
+    border-style: double;
+    border-color: ;
+    width: 250px;
+    height: 250px;
+    margin-bottom: -10px;
+}
+
+.greeting {
+    font-size: 45px;
+}
+
+.other {
+    margin-bottom: 40px;
+    padding-top: 20px;
+    border-top: 1px dotted rebeccapurple;
+}
+
+.other h4 {
+    padding-bottom: 10px;
+    color: rebeccapurple;
 }
