--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@
 
 body{
     font-family: cursive,sans-serif;
-    text-align: center;
+    text-align: ;
     font-size: 18px;
 /*    background-color: rgb(212, 212, 212,.50);*/
 }
@@ -27,13 +27,21 @@ body{
 
 h1,h2,h3 {
     color: rebeccapurple;
-    text-align: center;
     margin-bottom: 15px;
     margin-top: 15px;
 }
 
+h1 {
+    text-align: center;
+    padding-top: 10px;
+}
+
 h2 {
     font-size: 25px;
+}
+
+h3 {
+    text-align: center;
 }
 
 .dogplay_video {
@@ -44,7 +52,6 @@ h2 {
 hr {
     color: darkcyan;
     width: 50px;
-    
 }
 
 .container {
@@ -56,6 +63,8 @@ hr {
     width:75%;
     float: left;
     padding-right: 30px;
+    padding-left: 30px;
+    background-color: lightgray;
 }
 
 .other-posts {
@@ -67,15 +76,15 @@ hr {
 .author-box {
    padding-top: 20px;
    border-top: 1px solid darkcyan;
-    background-color: lightgray;
+   background-color: lightgray;
 }
 
 .jackprofile {
-    border-radius: 50%;
-    border-style: double;
-    border-color: ;
-    width: 250px;
-    height: 250px;
+    border-radius: 10%;
+    border-style:solid ;
+    border-color:black;
+    width: 200px;
+    height: 200px;
     margin-bottom: -10px;
 }
 
@@ -87,9 +96,22 @@ hr {
     margin-bottom: 40px;
     padding-top: 20px;
     border-top: 1px dotted rebeccapurple;
+    text-align: center;
 }
 
 .other h4 {
     padding-bottom: 10px;
     color: rebeccapurple;
+    text-align: center;
+}
+
+.dogsplaying {
+    border-radius: 30%;
+    border-style:solid ;
+    border-color:black;
+    width: 300px;
+    height: 200px;
+    margin-left: 34%;
+    margin-top: 10px;
+    
 }
