--- a/style.css
+++ b/style.css
@@ -85,7 +85,7 @@ hr {
     border-color:black;
     width: 200px;
     height: 200px;
-    margin-bottom: -10px;
+    margin-left: 34%;
 }
 
 .greeting {
