--- a/style.css
+++ b/style.css
@@ -34,6 +34,7 @@ h1,h2,h3 {
 h1 {
     text-align: center;
     padding-top: 10px;
+    margin-top: 25px;
 }
 
 h2 {
@@ -104,31 +105,8 @@ hr {
 }
 
 .author-box {
-   padding-top: 20px;
+   padding-top: 15px;
    border-top: 1px solid darkcyan;
-   background-color: lightgray;
-}
-
-.jackprofile {
-    border-radius: 10%;
-    border-style:solid ;
-    border-color:black;
-    width: 200px;
-    height: 200px;
-    margin-left: 34%;
-}
-
-.other {
-    margin-bottom: 40px;
-    padding-top: 20px;
-    border-top: 1px dotted rebeccapurple;
-    text-align: center;
-}
-
-.other h4 {
-    padding-bottom: 10px;
-    color: rebeccapurple;
-    text-align: center;
 }
 
 .author-box img {
@@ -144,4 +122,18 @@ hr {
     margin-top: 50px;
     margin-left: 10px;
 }
+
+.other {
+    margin-bottom: 40px;
+    padding-top: 20px;
+    border-top: 1px dotted rebeccapurple;
+    text-align: center;
+}
+
+.other h4 {
+    padding-bottom: 10px;
+    color: rebeccapurple;
+    text-align: center;
+}
+
 
